# singaji_setu_agent

./: .gitignore  README.md  app.py  encode_credentials.py  main.py  pyproject.toml  requirements.txt
config/: __init__.py  settings.py
services/: __init__.py  gemini_service.py  streaming_transcription_service.py  transcription_service.py
ui/: __init__.py  live_tab.py  tabs.py
utils/: __init__.py  audio_processor.py  live_recorder.py  ui_components.py
